# myelin

./: .gitignore  Here is a complete module-by-module.txt  README.md  factory-ai.tokens.json  package-lock.json  package.json  select.txt  test-math.js  test_lute.js  test_script.js  test_vditor_html.js  vite.config.ts
docs/: agent-system-prompt.md  llama-backends.md  windows-installer-build.md
scripts/: probe-toolcall.sh
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  model-profiles.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  embeddings.rs  gguf.rs  git_history.rs  lib.rs  llama_server.rs  main.rs  model_profiles.rs  models.rs  notebook.rs  rag.rs  state.rs  stream_chat.rs  tool_capability.rs  wayland_shortcut.rs  web_search.rs
src-tauri/templates/: lfm2.jinja
src/lib/: appCache.ts  llamaWarm.ts  stores.ts  theme.ts  types.ts
src/lib/components/: ChatToolIndicator.svelte  EpubViewer.svelte  HtmlViewer.svelte  IpynbEditor.svelte  NotebookSelect.svelte  PdfPage.svelte  PdfViewer.svelte  TexEditor.svelte
src/routes/: +layout.svelte  +page.svelte
training/: .gitignore  README.md  RESULTS.md  app_preamble.txt  base_preamble.txt  build_kernels.ps1  candidate_preamble.txt  diag.py  eval.jsonl  eval.py  eval_iter3.py  eval_run.ps1  finalize.ps1  gen_data.py  memcheck.py  merge_data.py  myelin_prompt.py  patch_causal_conv1d.py  probe_flow.py  probe_trunc.py  rebalance_data.py  replay.py  requirements.txt  runenv.ps1  seed.jsonl  seed_iter3.py  test_convo.py  test_flow.py  test_research.py  train_lora.py  validate_data.py
training/info/: about.json  hash_input.json  index.json  paths.json
(+11 files in other folders)
