[package]
name = "myelin"
version = "0.1.0"
description = "Cross-platform local-first AI notes"
authors = ["Paper"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myelin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0"
arrow-array = "53.4"
arrow-schema = "53.4"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.21.0"
futures-util = "0.3"
lancedb = "0.14.0"
log = "0.4"
notify = "8.2"
parking_lot = "0.12"
regex = "1.12.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2.5"
rig-core = "0.38.2"
schemars = { version = "1.2.1", features = ["derive"] }
tempfile = "3.27.0"
tectonic = "0.16.9"
tokio = { version = "1.52.3", features = ["sync"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "master"

[package.metadata.vcpkg.dependencies]
fontconfig = ""
freetype = ""
harfbuzz = { default-features = false, features = ["graphite2"] }
icu = ""
libpng = ""
zlib = ""
openssl = ""
